[package]
name = "oximedia-cloud"
description = "Cloud storage and media services integration for AWS, Azure, and GCP"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

# AWS SDK (ring-based TLS to avoid aws-lc-sys C dependency)
aws-config = { version = "1.8", default-features = false, features = ["rt-tokio", "credentials-process", "sso"] }
aws-sdk-s3 = { version = "1.129", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-mediaconvert = { version = "1.124", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-medialive = { version = "1.133", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-mediapackage = { version = "1.97", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-cloudwatch = { version = "1.109", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-sts = { version = "1.101", default-features = false, features = ["rustls", "rt-tokio"] }
aws-sdk-kms = { version = "1.104", default-features = false, features = ["rustls", "rt-tokio"] }
aws-smithy-types = "1.4"
aws-smithy-runtime = { version = "1", features = ["tls-rustls", "client"] }
aws-smithy-runtime-api = "1.11"

# Azure SDK
azure_core = "0.34"
azure_storage = "0.21"
azure_storage_blobs = "0.21"
azure_identity = "0.34"

# GCP (using reqwest for REST API)
reqwest = { workspace = true, features = ["stream"] }
base64 = { workspace = true }
url = "2.5"
sha2 = { workspace = true }
hmac = { workspace = true }
md-5 = "0.11"
hex = "0.4"

# Additional utilities
futures = "0.3"
pin-project = "1.1"
parking_lot = { workspace = true }
dashmap = { workspace = true }
urlencoding = "2.1"
rayon = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.7"
tempfile.workspace = true
wiremock = "0.6"
test-case = "3.3"
