[package]
name = "oximedia-conform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Professional media conforming system for OxiMedia - EDL/XML/AAF timeline reconstruction"

[lints]
workspace = true

[dependencies]
oximedia-core = { workspace = true }
oximedia-timecode = { workspace = true }
oximedia-edl = { workspace = true }
oximedia-aaf = { workspace = true }
oximedia-container = { workspace = true }
oximedia-metadata = { workspace = true }
oximedia-transcode = { workspace = true }
oximedia-workflow = { workspace = true }

# Workspace dependencies
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }

# Database
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }

# Additional dependencies
regex = "1.12"
glob = "0.3"
walkdir = "2.5"
sha2 = { workspace = true }
md5 = "0.8"
hex = "0.4"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
strsim = "0.11"
quick-xml = "0.39"
tracing = { workspace = true }
num_cpus = "1.17"
pathdiff = "0.2"

[dev-dependencies]
tempfile.workspace = true
criterion = { workspace = true }

[features]
default = []

[lib]
name = "oximedia_conform"
path = "src/lib.rs"
